--- a/src/app/modules/most-scores/most-scores.component.html
+++ b/src/app/modules/most-scores/most-scores.component.html
@@ -12,11 +12,21 @@
                 <i class="fa fa-refresh"></i>
             </span>
         </div>
-        <div class="mt-3">
+        <div class="mt-5 mx-3">
+            <span 
+            *ngFor="let loader of [1, 2, 3, 4, 5, 6, 7]">
+        <ngx-skeleton-loader [theme]="{height: '40px', }"></ngx-skeleton-loader>
+    
+    
+            </span>
+        </div>
+        <div 
+        class="mt-3"
+        *ngIf="users">
             <div>
                 <div 
                 class="d-flex justify-content-around align-items-start"
-                *ngIf="users">
+                >
                     <div class="d-grid"
                     (click)="openPhoto('../../../assets/images/profile.jpg')"
                     style="margin-top: 2.7rem;">
