update the header's style

--- a/src/app/modules/auth/signup/signup.component.html
+++ b/src/app/modules/auth/signup/signup.component.html
@@ -151,7 +151,7 @@
         </div>
         <div class=" w-100 d-flex justify-content-center mt-2">
             <div>
-                <span>Already have an account ? </span>
+                <span>usanzwe ufise ikonti ? </span>
                 <b
                  class="text-main"
                  routerLink="/login"
