--- a/src/app/modules/home/home/home.component.html
+++ b/src/app/modules/home/home/home.component.html
@@ -4,11 +4,11 @@
 
    <br><br><br><br><br>
    <div class="w-100 d-flex justify-content-center">
-    <img 
+    <!-- <img 
     class="bg-main"
     style="width: 30%;"
     src="../../../assets/images/wave.gif"
-    alt="">
+    alt=""> -->
 
    </div>
    <br><br><br>
