--- a/src/app/modules/layout/header/header.component.html
+++ b/src/app/modules/layout/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="bg-main w-100 d-flex justify-content-between align-items-center" style="z-index:25">
+<div class="bg-white w-100 d-flex justify-content-between align-items-center" style="z-index:25">
  
     <div 
     class="p-1 ps-2 d-flex align-items-center" 
@@ -14,16 +14,16 @@
         <span 
     routerLink="" 
 
-        class="lg-fs text-white">Ibisokozo</span>
+        class="lg-fs text-main">Ibisokozo</span>
     </div>
     
 
     <div>
-        <div class="pe-2">
+        <div class="pe-2 text-main">
         <div 
         *ngIf="isAuthenticated"
         role="button"
-        class="text-white"
+        class=""
         (click)="toggleMenu()"
         >
             <span class="xl-fs">
@@ -34,7 +34,7 @@
         <div 
         *ngIf="!isAuthenticated"
         routerLink="/login"
-        class="xl-fs text-white "
+        class="xl-fs"
         role="button">
             <span
             >
@@ -91,7 +91,7 @@
             <div
             class="d-flex align-items-center">
                 <i class="fa fa-user-circle me-2 fs-1"></i>
-                <span>My profile</span>
+                <span>ikonti yanje</span>
             </div>
             <span>
                 <i class="fa fa-chevron-right"></i>
@@ -106,7 +106,7 @@
             <div
             class="d-flex align-items-center">
                 <i class="fa fa-star me-2 fs-1"></i>
-                <span>Most score</span>
+                <span>Abakinyi beza</span>
             </div>
             <span>
                 <i class="fa fa-chevron-right"></i>
@@ -114,7 +114,7 @@
                 
             </div>
 
-            <div 
+            <!-- <div 
             class="d-flex align-items-center my-3 mb-4 justify-content-between fs-3" 
             >
             <div
@@ -126,7 +126,7 @@
                 <i class="fa fa-chevron-right"></i>
             </span>
                 
-            </div>
+            </div> -->
             <div 
             class="d-flex align-items-center my-3 mb-4 fs-3" 
             >
@@ -136,7 +136,7 @@
             role="button"
             >
                 <i class="fa fa-sign-out-alt me-2 fs-1"></i>
-                <span>Logout</span>
+                <span>Sohoka</span>
             </div>
             <!-- <span>
                 <i class="fa fa-chevron-right"></i>
@@ -151,6 +151,7 @@
     </div>
     
 </div>
+<hr class="my-1 text-main">
 
 <dialog id="favDialog" class="rounded mx-2 shadow" style="border: none; max-width: 500px">
     <div>
@@ -161,7 +162,7 @@
             style="font-weight: 900; font-size: 20px"
             class="text-center"
         >
-            Would you like to disconnect in Ibisokozo App
+            Woba vyukuri wipfuza gusohoka muri runo rubuga
         </p>
         <div class="text-center mt-3">
             <button
@@ -169,7 +170,7 @@
                 class="btn btn-primary btn-sm me-3"
                 (click)="logout()"
             >
-                Yes
+                Ego
             </button>
 
             <button
@@ -177,7 +178,7 @@
                 class="btn btn-dark btn-sm"
                 (click)="closeModal()"
             >
-                No
+                Oya
             </button>
         </div>
     </div>
