--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -4,7 +4,7 @@
 </div>
 <div class="pt-5">
     <div class="w-100 d-flex justify-content-center mb-5 mt-5 ">
-        <span class="lg-fs text-main">Login</span>
+        <span class="lg-fs text-main">Injira</span>
     </div>
 
     <div class="w-100 d-flex justify-content-center mt-5">
@@ -70,7 +70,7 @@
                  class="text-main" 
                  routerLink="/reset-password"
                  style="text-decoration: underline;"
-                 role="button">Forgot password</b>
+                 role="button">Wibagiye akabanga ?</b>
             </div><br><br><br>
 
             <div
@@ -86,7 +86,7 @@
 
                     <b 
                     *ngIf="!isLoading"
-                    >Login</b>
+                    >Injira</b>
                     <div 
                     class="d-flex align-items-center"
                     *ngIf="isLoading"
@@ -108,7 +108,7 @@
                     <b
                      class="text-main"
                      routerLink="/signup"
-                     role="button">Signup</b>
+                     role="button">iyandikishe</b>
                 </div>
             </div>
             
