--- a/src/app/modules/most-scores/most-scores.component.html
+++ b/src/app/modules/most-scores/most-scores.component.html
@@ -12,7 +12,9 @@
                 <i class="fa fa-refresh"></i>
             </span>
         </div>
-        <div class="mt-5 mx-3">
+        <div
+        *ngIf="!users" 
+        class="mt-5 mx-3">
             <span 
             *ngFor="let loader of [1, 2, 3, 4, 5, 6, 7]">
         <ngx-skeleton-loader [theme]="{height: '40px', }"></ngx-skeleton-loader>
