--- a/src/app/modules/profile/profile/profile.component.html
+++ b/src/app/modules/profile/profile/profile.component.html
@@ -56,7 +56,7 @@
                 </div>
                 
                 <p class="profile-points text-muted">
-                    <i>{{user.username}}</i>
+                    <i>@{{user.username}}</i>
                 </p>
                 <p class="profile-points text-muted">
                     <b
@@ -66,7 +66,7 @@
                 </p>
             </div>
 
-            <div>
+            <!-- <div>
                 <div class="w-100 d-flex justify-content-center">
                     <button 
                     class="btn btn-outline-dark"
@@ -88,7 +88,7 @@
                 </b>
                 </button>
                 </div>
-            </div>
+            </div> -->
             
         </div>
     
