make the menu page full of screen

--- a/src/app/modules/layout/header/header.component.html
+++ b/src/app/modules/layout/header/header.component.html
@@ -45,7 +45,7 @@
 
     </div>
     <div
-     class="bg-main text-white position-fixed mt-2 rounded menu h-100 w-100" 
+     class="bg-main text-white position-fixed mt-0 menu h-100 w-100" 
      style="right:0; z-index:25; top:0"
      *ngIf="isMenuShown">
      <div class="d-flex align-items-center justify-content-between w-100 px-4">
