--- a/src/app/modules/most-scores/most-scores.component.scss
+++ b/src/app/modules/most-scores/most-scores.component.scss
@@ -59,6 +59,13 @@ tr, td, th{
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 1000;
     display: none;
+    animation: myanim .7s;
+    -webkit-animation: myanim .7s;
+    transition: 2s ease-in-out;
+    -webkit-transition: 2s ease-in-out;
+    -moz-transition: 2s ease-in-out;
+    -ms-transition: 2s ease-in-out;
+    -o-transition: 2s ease-in-out;
 }
 
 .show-overlay {
@@ -78,6 +85,13 @@ tr, td, th{
     border-radius: 8px;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.5);
     display: none;
+
+}
+
+@keyframes myanim {
+    0%{opacity: 0;};
+    100%{opacity: 1;};
+    
 }
 
 .show-modal {
