correct the check answer method

--- a/src/app/modules/igisokozo/level-one/level-one.component.html
+++ b/src/app/modules/igisokozo/level-one/level-one.component.html
@@ -141,8 +141,8 @@ class="slide-in px-3"
             for="choice"
             class="initial-status rounded p-2 w-100 me-2 mb-1"
             [ngClass]="{
-                'success-status':item===igisokozo.inyishu.inyishu && highlightAnswers,
-                'danger-status':selectedAnswer !== igisokozo.inyishu.inyishu && highlightAnswers && item==selectedAnswer,
+                'success-status':item===igisokozo.inyishu && highlightAnswers,
+                'danger-status':selectedAnswer !== igisokozo.inyishu && highlightAnswers && item==selectedAnswer,
             }">
                 <div
             class=""
