update the menu design

--- a/src/app/modules/layout/header/header.component.html
+++ b/src/app/modules/layout/header/header.component.html
@@ -45,7 +45,7 @@
 
     </div>
     <div
-     class="bg-main text-white position-fixed mt-0 menu h-100 w-100" 
+     class="bg-white text-main position-fixed mt-0 menu h-100 w-100" 
      style="right:0; z-index:25; top:0"
      *ngIf="isMenuShown">
      <div class="d-flex align-items-center justify-content-between w-100 px-4">
@@ -61,8 +61,8 @@
             <div
             class="me-2">
                 <img 
-                class="rounded-circle"
-                style="width:50px; height:50px; border:2px solid white"
+                class="rounded-circle border border-success"
+                style="width:50px; height:50px"
                 [src]="userInfo.profile_photo" 
                 alt="">
             </div>
