display next igisokozo automatically after 2 seconds

--- a/src/app/modules/igisokozo/level-one/level-one.component.html
+++ b/src/app/modules/igisokozo/level-one/level-one.component.html
@@ -162,9 +162,8 @@ class="slide-in px-3"
         </div>
     </div>
 
-<div class="mt-5 me-2 float-end">
+<!-- <div class="mt-5 me-2 float-end">
     <button
-    (click)="getIgisokozo()"
         type="button"
         class="rounded p-2 bg-main text-white"
         style="border: none; "
@@ -198,7 +197,7 @@ class="slide-in px-3"
         
         
     </button>
-</div>
+</div> -->
 
 </div>
 <div class="w-100 d-flex justify-content-center">
