redirect the user on login afte signup success

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
 <router-outlet></router-outlet>
 
-<div class="position-fixed" style="height: 10px;">
+<div class="position-fixed" style="
+position: fixed;
+justify-content: center;
+display: flex;
+margin-top: 5vh;
+z-index: 1060;
+">
     <app-notification></app-notification>
  </div>
