--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,10 +2,23 @@
 
 @import 'node_modules/bootstrap/scss/bootstrap';
 
-*{
-  font-family: 'Roboto', sans-serif; 
+@font-face {
+  font-family: "open-sans";
+  src: url("../src/assets/fonts/OpenSans-Regular.ttf") format("truetype");
+  font-style: normal;
+  font-weight: 400;
+}
+@font-face {
+  font-family: "open-sans";
+  src: url("../src/assets/fonts/OpenSans-Bold.ttf") format("truetype");
+  font-style: normal;
+  font-weight: 700;
 }
 
+
+*{
+  font-family: open-sans;
+}
 
 $font-sizes: (
   'xsm': 12px,
