add roboto font

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,9 +15,22 @@
   font-weight: 700;
 }
 
+@font-face {
+  font-family: "roboto";
+  src: url("../src/assets/fonts/Roboto-Regular.ttf") format("truetype");
+  font-style: normal;
+  font-weight: 400;
+}
+@font-face {
+  font-family: "roboto";
+  src: url("../src/assets/fonts/Roboto-Bold.ttf") format("truetype");
+  font-style: normal;
+  font-weight: 700;
+}
+
 
 *{
-  font-family: open-sans;
+  font-family:roboto;
 }
 
 $font-sizes: (
