add logo and app review

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<router-outlet></router-outlet>
+<div class="overflow-x-hidden">
+    <router-outlet></router-outlet>
 
 <div class="position-fixed" style="
 position: fixed;
@@ -6,6 +7,9 @@ justify-content: center;
 display: flex;
 margin-top: 5vh;
 z-index: 1060;
+
 ">
     <app-notification></app-notification>
  </div>
+
+</div>
