--- a/src/app/modules/most-scores/most-scores.component.html
+++ b/src/app/modules/most-scores/most-scores.component.html
@@ -235,8 +235,8 @@ class="photo-modal d-grid"
     </b>
     <img [src]="enlargedPhotoUrl" alt="Enlarged User Photo" class="enlarged-photo">
     <div class="d-grid pt-2">
-        <span>{{selectedUser.first_name}} {{selectedUser.last_name}}</span>
-        <b>{{selectedUser.score}}pts</b>
+        <b>{{selectedUser.first_name}} {{selectedUser.last_name}}</b>
+        <span>{{selectedUser.score}}pts</span>
 
     </div>
 
