--- a/src/app/modules/home/home/home.component.html
+++ b/src/app/modules/home/home/home.component.html
@@ -1,8 +1,18 @@
 <div class="mt-4 p-1" class="">
 
     <canvas id="canvas" #canvas></canvas>
+    <div class="fs-4 mt-5 ps-2">
 
-   <br><br><br><br><br>
+        <h4 class="auto-typing">
+            <div >
+              <b id="typing-text"></b>
+              <b class="fs-1 ">|</b>
+            </div>
+          </h4>
+
+    </div>
+
+   <br><br><br>
    <div class="w-100 d-flex justify-content-center">
 
 
@@ -12,11 +22,23 @@
     <div class="">
         <div class="w-100 h-100 align-items-center d-flex justify-content-center">
             <button
+            *ngIf="isAuthenticated"
+
             (click)="startGame()"
              style="border: 10%; border:none"
               class="bg-main rounded text-white p-2 shadow">
                 <b>Tangura agakino</b>
             </button>
+           
+
+                <button
+            *ngIf="!isAuthenticated"
+
+                (click)="goToLogin()"
+                 style="border: 10%; border:none"
+                  class="bg-main rounded text-white p-2 shadow">
+                    <b class="mx-5 my-2">Injira</b>
+                </button>
         </div>
         <br><br><br><br>
         <div class="text-center">
