--- a/src/app/modules/layout/footer/footer.component.html
+++ b/src/app/modules/layout/footer/footer.component.html
@@ -1,9 +1,18 @@
-<div class="bg-grey psm-y d-flex justify-content-center align-items-center">
-    <div class="text-white">
-        <b class="me-1">Ibisokozo</b>
-        <span class="me-1">©</span>
-        <b>2023</b>
-    </div>
+<div class="bg-grey psm-y text-white d-flex justify-content-center align-items-center">
+    <span class="me-2">Wagize ikibazo ?</span>
+    <a
+             href="whatsapp://send?phone=+25765526631"
+            class="d-flex align-items-center justify-content-between fs-6" 
+            role="button"
+            style="text-decoration: none; color:#36AE7C"
+            >
+            <div
+            class="d-flex align-items-center">
+                <span class="bg-main text-white p-1 rounded">Ronka bufasha</span>
+            </div>
+
+                
+            </a>
 
 
 </div>
