--- a/src/styles.scss
+++ b/src/styles.scss
@@ -85,6 +85,12 @@ button:hover{
   background-color: #18b86b;  
 }
 
+.bg-main:hover{
+  background-color: #18b86b;  
+
+
+}
+
 .border-main{
   border:2px solid #3ded97
 }
